--- a/CloudDemoAPI/CloudDemoAPI/appsettings.json
+++ b/CloudDemoAPI/CloudDemoAPI/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MailSettings": {
+    "From": "sapnatest@test.com",
+    "To":"Customer@test.com"
+  }
+
 }
